--- a/main.html
+++ b/main.html
@@ -5,9 +5,9 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<P>Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size</P>
 <body>
 	<!-- the entire body must be written by student -->
+	<P> <b>Accio ipsum</b> dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size</P>
     <script type="text/javascript" src="./script.js">
 </script>
 
